// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyIcon: Component should render correctly 1`] = `
<copy.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;

exports[`CopyIcon: Component should render with custom styles 1`] = `
<copy.svg
  style={
    Object {
      "fill": "blue",
      "height": "20px",
      "width": "20px",
    }
  }
/>
`;
